<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_padding">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/y120">
        
        <EditText
            android:id="@+id/edtLoginUser"
            style="@style/LoginInputEdt"
            android:hint="@string/login_user_hint"/>

        <View style="@style/LoginLineHorizontal"/>

        <EditText
            android:id="@+id/edtLoginPassword"
            style="@style/LoginInputEdt"
            android:inputType="textPassword"
            android:hint="@string/login_pwd_hint"
            android:layout_marginTop="@dimen/login_vertical_padding"/>

        <View style="@style/LoginLineHorizontal"/>

        <TextView
            style="@style/LoginHintTxt"
            android:text="@string/login_content"
            android:layout_marginTop="@dimen/login_vertical_padding"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/LoginBtn"
            android:text="@string/login_btn"
            android:layout_marginTop="@dimen/login_vertical_padding"/>
        
        
    </LinearLayout>


</RelativeLayout>